--- a/src/Style-Selection-Screen.css
+++ b/src/Style-Selection-Screen.css
@@ -56,5 +56,14 @@ h4:hover {
 .Login {
     margin-left: 33%;
 
+}
+
+.linha-vertical {
+    border-left: 6px solid #00FF7F;
+    margin: 0;
+    position:absolute;
+    height: 100%;
+    left: 350px;
+    top: 0px;
 
 }
