--- a/src/Style-Selection-Screen.css
+++ b/src/Style-Selection-Screen.css
@@ -1,4 +1,5 @@
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     background-color: #2c3333db;
@@ -20,12 +21,13 @@ body {
 
 }
 
-nav {
+.Container {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10%;
     background: transparent;
+    z-index: 1000;
 }
 
 .Icon {
@@ -41,7 +43,7 @@ nav {
     color:#00FF7F
 }
 
-h4 {
+.cadastro {
     color: #000000;
     margin-left: 20%;
     Margin-top: 10%;
@@ -49,12 +51,15 @@ h4 {
 
 }
 
-h4:hover {
+.cadastro:hover {
     color:#00FF7F
 }
 
 .Login {
     margin-left: 33%;
+    font-size: 3rem;
+    margin-left: 32%;
+    Margin-top: 10%;
 
 }
 
@@ -65,5 +70,28 @@ h4:hover {
     height: 100%;
     left: 350px;
     top: 0px;
+
+}
+
+.logo {
+    position: absolute;
+    width: 380px;
+    height: 240px;
+    top:340px;
+    z-index: -1;
+}
+
+.Bottom-Confirm {
+    background-color:#00FF7F;
+    width: 528px;
+    height: 83px;
+    border-radius: 80px;
+    margin-left: 40%;
+    cursor: pointer;
+}
+
+.confirmar{
+    font-size: 4rem;
+    margin-left: 22%;
 
 }
