--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -1,49 +1,47 @@
-body{
-    background-color: #232424;
-    margin: 0;
-    padding: 0;
-    Overflow: hidden
+body {
+  background-color: #232424;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 header {
-    display: flex;
-    justify-content: flex-end;
-
+  display: flex;
+  justify-content: flex-end;
 }
 
 h4 {
-    color: white;
-    margin-left: 10px;
-    margin-right: 30px;
-    font-size: 20px;
-    border: 8px solid transparent;
-    border-radius: 10px;
-    transition: 0.6s ease;
+  color: white;
+  margin-left: 10px;
+  margin-right: 30px;
+  font-size: 20px;
+  border: 8px solid transparent;
+  border-radius: 10px;
+  transition: 0.6s ease;
 }
 
 h4:hover {
-    background-color: #fff;
-    color: #000;
+  background-color: #fff;
+  color: #000;
 }
 .box-img-linhas {
-    display: flex;
-    flex-direction: column;
-    height: 10px;
-    width: 30px;
+  display: flex;
+  flex-direction: column;
+  height: 10px;
+  width: 30px;
 }
 
 .logo {
-    height: 70px; 
-    width: 120px;
-    margin-top: 10px; 
-} 
+  height: 70px;
+  width: 120px;
+  margin-top: 10px;
+}
 
 .linha-vertical {
-    border-left: 6px solid #117050;
-    position: fixed;
-    height: 100%;
-    margin-left: 118px;
-
+  border-left: 6px solid #117050;
+  position: fixed;
+  height: 100%;
+  margin-left: 118px;
 }
 
 /* .linha-horizontal {
@@ -54,143 +52,142 @@ h4:hover {
 } */
 
 .menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 120px;
-    height: 800px;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 120px;
+  height: 800px;
+  margin: 0;
 }
 
 .Container-geral {
-    display: flex;
+  display: flex;
 }
 
 .Icon {
-    color: #00FF7F;
-    width: 90px;
-    height: 90px;
-    margin: 35px;
-    cursor: pointer;
+  color: #00ff7f;
+  width: 90px;
+  height: 90px;
+  margin: 35px;
+  cursor: pointer;
 }
 
 footer {
-    margin-top: 80px;
-    display: flex;
-    background-color: #1f1f1f;
-    width: 100%;
-    height: 200px;
+  margin-top: 80px;
+  display: flex;
+  background-color: #1f1f1f;
+  width: 100%;
+  height: 200px;
 }
 
 .copyright {
-    color: white;
-    font-size: 20px;
-    padding: 50px 20px;
-    margin-left: 140px ;
+  color: white;
+  font-size: 20px;
+  padding: 50px 20px;
+  margin-left: 140px;
 }
 
 .line-home {
-    border: 3px solid #117050;
-    height: 10px;
-    width: 2700px;
+  border: 3px solid #117050;
+  height: 10px;
+  width: 2700px;
 }
 
 .Container_main {
-    margin-top: 25px;
-    height: 600px;
-    width: 2500px;
+  margin-top: 25px;
+  height: 600px;
+  width: 2500px;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #232423;
-    height: 60vh;
-  }
-  
-.container_box {
-    display: none;
-    background: #464646;
-    box-shadow: 0px 4px 4px #000000;
-    max-width: 330px;
-    min-height: 350px;
-    border-radius: 2px;
-    padding: 40px;
-  }
-.lg {
-    display: flex;
-    justify-content: first baseline;
-    align-items: center;
-    color: rgb(0, 0, 0);
-    margin-bottom: 20px;
-  }
-  
-  .lg h3 {
-    margin-right: 25px;
-    font-weight: 700;
-    cursor: pointer;
-    font-size: 20px;
-  }
-  h3:hover {
-    transform: scale(1.02);
-  }
-  
-  .active {
-    position: relative;
-  }
-  .active::after {
-    content: "";
-    position: absolute;
-    width: 30px;
-    top: 22px;
-    left: 0;
-    border-bottom: 2px solid #00FF7F;
-  }
-  label {
-    font-weight: 500;
-    font-size: 16px;
-    color: #000000;
-  }
-  input[type="text"],
-  input[type="password"],
-  input[type="email"] {
-    width: 100%;
-    padding: 6px;
-    margin: 5px 0 22px 0;
-    border: none;
-    border-bottom: 1px solid rgb(5, 5, 5);
-    background: transparent;
-    outline: none;
-  }
-  input[type="text"]:focus,
-  input[type="password"]:focus,
-  input[type="email"]:focus {
-    border-bottom: 1px solid #00FF7F;
-    color: rgb(252, 252, 252);
-  }
-  
-  .btn {
-    background-color: #00FF7F;
-    color: rgb(0, 0, 0);
-    padding: 8px 10px;
-    border: none;
-    cursor: pointer;
-    width: 130px;
-    opacity: 0.9;
-    margin-left: 100px;
-  }
-  .btn:hover {
-    opacity: 1;
-  }
-  .form p {
-    margin-top: 40px;
-    font-weight: 600;
-    font-size: 14px;
-    color: #000000;
-  }
-  .form_register {
-    display: none;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #232423;
+  height: 60vh;
+}
 
+.container_box {
+  display: none;
+  background: #464646;
+  box-shadow: 0px 4px 4px #000000;
+  max-width: 330px;
+  min-height: 350px;
+  border-radius: 2px;
+  padding: 40px;
+}
+.lg {
+  display: flex;
+  justify-content: first baseline;
+  align-items: center;
+  color: rgb(0, 0, 0);
+  margin-bottom: 20px;
+}
+
+.lg h3 {
+  margin-right: 25px;
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 20px;
+}
+h3:hover {
+  transform: scale(1.02);
+}
+
+.active {
+  position: relative;
+}
+.active::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  top: 22px;
+  left: 0;
+  border-bottom: 2px solid #00ff7f;
+}
+label {
+  font-weight: 500;
+  font-size: 16px;
+  color: #000000;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  width: 100%;
+  padding: 6px;
+  margin: 5px 0 22px 0;
+  border: none;
+  border-bottom: 1px solid rgb(5, 5, 5);
+  background: transparent;
+  outline: none;
+}
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus {
+  border-bottom: 1px solid #00ff7f;
+  color: rgb(252, 252, 252);
+}
+
+.btn {
+  background-color: #00ff7f;
+  color: rgb(0, 0, 0);
+  padding: 8px 10px;
+  border: none;
+  cursor: pointer;
+  width: 130px;
+  opacity: 0.9;
+  margin-left: 100px;
+}
+.btn:hover {
+  opacity: 1;
+}
+.form p {
+  margin-top: 40px;
+  font-weight: 600;
+  font-size: 14px;
+  color: #000000;
+}
+.form_register {
+  display: none;
+}
