--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -94,10 +94,19 @@ footer {
   width: 2700px;
 }
 
+/* .mainEPI {
+  display: none;
+}
+
+.mainColab {
+  display: none;
+} */
+
 .Container_main {
-  margin-top: 25px;
+  margin-top: 80px;
   height: 600px;
   width: 2500px;
+  display: none;
 }
 
 .container {
@@ -109,6 +118,15 @@ footer {
 }
 
 .container_box {
+  display: none;
+  background: #464646;
+  box-shadow: 0px 4px 4px #000000;
+  max-width: 330px;
+  min-height: 350px;
+  border-radius: 2px;
+  padding: 40px;
+}
+.Container_BOXEPI {
   display: none;
   background: #464646;
   box-shadow: 0px 4px 4px #000000;
