S01 - 25/05/2022 - Cristhyam - Acrescimo de 4 protótipo de tela e animação na sidebar

--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -41,7 +41,51 @@ h4:hover {
   border-left: 6px solid #117050;
   position: fixed;
   height: 100%;
-  margin-left: 118px;
+  margin-left: 120px;
+}
+
+.teste {
+  animation-name: slide;
+  animation-duration: 1s;
+  margin-left: 400px;
+}
+
+@keyframes slide {
+  from {
+    height: 100%;
+    margin-left: 120px;
+  }
+  to {
+    margin-left: 400px;
+    height: 100%;
+  }
+}
+
+.p- {
+  font-size: 1.5rem;
+  color: #00ff7f;
+  opacity: 0;
+}
+
+.nomeIcon {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.show {
+  transition: 2s;
+  opacity: 1;
+}
+
+.colab,
+.cadcolab,
+.EPI,
+.cadEPI,
+.histórico,
+.aviso {
+  border: #00ff7f solid 1px;
+  padding: 10px;
 }
 
 /* .linha-horizontal {
@@ -71,6 +115,11 @@ h4:hover {
   height: 90px;
   margin: 35px;
   cursor: pointer;
+}
+
+.pesquisaColab {
+  width: 30px;
+  border: #00ff7f solid 2px;
 }
 
 footer {
@@ -127,6 +176,35 @@ footer {
   padding: 40px;
 }
 .Container_BOXEPI {
+  display: none;
+  background: #464646;
+  box-shadow: 0px 4px 4px #000000;
+  max-width: 330px;
+  min-height: 350px;
+  border-radius: 2px;
+  padding: 40px;
+}
+.container_boxbuscaColab {
+  display: none;
+  background: #464646;
+  box-shadow: 0px 4px 4px #000000;
+  max-width: 330px;
+  min-height: 350px;
+  border-radius: 2px;
+  padding: 40px;
+}
+
+.container_buscaEPI {
+  display: none;
+  background: #464646;
+  box-shadow: 0px 4px 4px #000000;
+  max-width: 330px;
+  min-height: 350px;
+  border-radius: 2px;
+  padding: 40px;
+}
+
+.Container_boxAvisoEPI {
   display: none;
   background: #464646;
   box-shadow: 0px 4px 4px #000000;
