S01 - 30/05/2022 - Cristhyam - Adicionando Tela de cadastro de EPI

--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -287,3 +287,10 @@ input[type="email"]:focus {
 .form_register {
   display: none;
 }
+
+#ButtonBuscaColab {
+  color: #00ff7f;
+  height: 450px;
+  width: 450px;
+  font-size: 1.4rem;
+}
