--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -294,3 +294,33 @@ input[type="email"]:focus {
   width: 450px;
   font-size: 1.4rem;
 }
+
+ul{
+    float: right;
+    list-style-type: none;
+    margin-top: 5px;
+  }
+    
+  ul li{
+    display: inline-block;
+  }
+     
+  ul li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+    transition: 0.6s ease;
+  }
+    
+  ul li a:hover{
+    background-color: #fff;
+    color: #000;
+  }
+  
+  ul li.active a{
+    background-color: #fff;
+    color: #000;
+  }
+
+
