--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -284,6 +284,13 @@ input[type="email"]:focus {
   font-size: 1.4rem;
 }
 
+#ButtonBuscaEPI {
+  color: #00ff7f;
+  height: 450px;
+  width: 450px;
+  font-size: 1.4rem;
+}
+
 ul {
   float: right;
   list-style-type: none;
