S01 -01/06/2022 - Cristhyam - Estilização da aba search na busca de EPI

--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -255,6 +255,25 @@ h3:hover {
   width: 260px;
 }
 
+.searchEPI {
+  border: 2px solid #00ff7f;
+  border-radius: 15px;
+  height: 35px;
+  width: 320px;
+  margin-bottom: 40px;
+}
+
+#txtBuscaEPI {
+  float: left;
+  background-color: transparent;
+  padding-left: 10px;
+  font-style: italic;
+  font-size: 18px;
+  border: none;
+  height: 15px;
+  width: 260px;
+}
+
 label {
   font-weight: 500;
   font-size: 16px;
