--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -32,8 +32,8 @@ h4:hover {
 }
 
 .logo {
-  height: 70px;
-  width: 120px;
+  height: 80px;
+  width: 130px;
   margin-top: 10px;
 }
 
@@ -41,7 +41,7 @@ h4:hover {
   border-left: 6px solid #117050;
   position: fixed;
   height: 100%;
-  margin-left: 120px;
+  margin-left: 135px;
 }
 
 .teste {
@@ -62,15 +62,15 @@ h4:hover {
 }
 
 .p- {
-  font-size: 1.5rem;
+  font-size: 1.45rem;
   color: #00ff7f;
   opacity: 0;
 }
 
 .nomeIcon {
+  margin-top: 13px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .show {
@@ -85,7 +85,8 @@ h4:hover {
 .histórico,
 .aviso {
   border: #00ff7f solid 1px;
-  padding: 10px;
+  padding: 8px;
+  gap: 20px;
 }
 
 /* .linha-horizontal {
@@ -100,7 +101,7 @@ h4:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 120px;
+  max-width: 125px;
   height: 800px;
   margin: 0;
 }
