--- a/src/css/Style-TelaLogin.css
+++ b/src/css/Style-TelaLogin.css
@@ -12,7 +12,7 @@ header {
   justify-content: center;
   gap: 600px;
   background-color: whitesmoke;
-  border-color: black;
+  border-color: 5px solid black;
 }
 
 .Cad_Login {
@@ -71,7 +71,7 @@ h1 {
 }
 
 p {
-  font-size: 25px;
+  font-size: 15px;
   margin: 10px;
 }
 
@@ -88,10 +88,10 @@ h2 {
   height: 35px;
   border-radius: 6px;
   margin-left: 8px;
-  background-color: #71db6f;
-  opacity: 40%;
+  color: #000000;
+  font-size: 20px;
+  background-color: #dadada;
   border: none;
-  color: black;
 }
 
 .forget {
@@ -103,15 +103,14 @@ h2 {
   height: 35px;
   border-radius: 6px;
   margin-left: 8px;
-  background-color: #71db6f;
-  opacity: 40%;
+  background-color: #dadada;
   border: none;
   color: black;
 }
 
 .button_enter {
   width: 120px;
-  height: 39px;
+  height: 45px;
   border-radius: 8px;
   margin-left: 8px;
   margin-top: 15px;
