S01 -08/06/2022 - Cristhyam - Criação de tel para linkar EPI com Colaborador

--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -68,7 +68,8 @@ h4:hover {
 }
 
 .nomeIcon {
-  margin-top: 13px;
+  margin-top: 5px;
+  gap: 25px;
   display: flex;
   flex-direction: column;
 }
