S01 -13/06/2022 - Cristhyam - Criação da tabela para gerar usuário com o EPI (incompleto)

--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -393,3 +393,10 @@ ul li.active a {
   background-color: #fff;
   color: #000;
 }
+
+.relatorio {
+  margin-top: 20px;
+  width: 300px;
+  height: 250px;
+  background-color: white;
+}
