--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -41,37 +41,20 @@ h4:hover {
   border-left: 6px solid #117050;
   position: fixed;
   height: 100%;
-  margin-left: 135px;
-}
-
-.teste {
-  animation-name: slide;
-  animation-duration: 1s;
   margin-left: 400px;
-}
-
-@keyframes slide {
-  from {
-    height: 100%;
-    margin-left: 120px;
-  }
-  to {
-    margin-left: 400px;
-    height: 100%;
-  }
 }
 
 .p- {
   font-size: 1.45rem;
   color: #00ff7f;
-  opacity: 0;
 }
 
 .nomeIcon {
-  margin-top: 5px;
-  gap: 25px;
+  margin-top: 50px;
+  gap: 30px;
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
 }
 
 .show {
@@ -86,16 +69,9 @@ h4:hover {
 .histórico,
 .aviso {
   border: #00ff7f solid 1px;
-  padding: 8px;
+  padding: 8px 20px 8px 20px;
   gap: 20px;
 }
-
-/* .linha-horizontal {
-    border: 3px solid #117050;
-    width: 115px;
-    position: relative;
-    top: 750px;
-} */
 
 .menu {
   display: flex;
@@ -113,8 +89,8 @@ h4:hover {
 
 .Icon {
   color: #00ff7f;
-  width: 90px;
-  height: 90px;
+  width: 50px;
+  height: 50px;
   margin: 35px;
   cursor: pointer;
 }
@@ -220,7 +196,6 @@ footer {
 .Atribuir_EPI {
   display: flex;
   align-items: center;
-  height: 500px;
 }
 #teste12 {
   display: flex;
@@ -398,5 +373,10 @@ ul li.active a {
   margin-top: 20px;
   width: 300px;
   height: 250px;
-  background-color: white;
+}
+
+td {
+  border: 1px solid black;
+  padding: 3px;
+  color: #00ff7f;
 }
