--- a/src/css/Style-TelaLogin.css
+++ b/src/css/Style-TelaLogin.css
@@ -125,14 +125,15 @@ h2 {
 }
 
 .img_central {
-  max-height: 100%;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
+  /* width: 600px; */
 }
-
-/* .imagem_principal {
-  border: 3px solid black;
+/* 
+.imagem_principal {
   width: 600px;
-  height: 800px;
+  height: 680px;
+  overflow: hidden;
 } */
 
 .img_footer {
