--- a/src/css/Style-Index.css
+++ b/src/css/Style-Index.css
@@ -35,6 +35,7 @@ h4:hover {
   height: 80px;
   width: 130px;
   margin-top: 10px;
+  margin-left: 130px;
 }
 
 .linha-vertical {
@@ -157,7 +158,7 @@ footer {
   display: none;
   background: #464646;
   box-shadow: 0px 4px 4px #000000;
-  max-width: 330px;
+  width: 550px;
   min-height: 350px;
   border-radius: 2px;
   padding: 40px;
@@ -167,21 +168,21 @@ footer {
   display: none;
   background: #464646;
   box-shadow: 0px 4px 4px #000000;
-  max-width: 330px;
+  width: 610px;
   min-height: 350px;
   border-radius: 2px;
   padding: 40px;
 }
 
-.Container_boxAvisoEPI {
+/* .Container_boxAvisoEPI {
   display: none;
   background: #464646;
   box-shadow: 0px 4px 4px #000000;
-  max-width: 330px;
+  width: 550px;
   min-height: 350px;
   border-radius: 2px;
   padding: 40px;
-}
+} */
 
 .Container_BOXENTREG {
   display: none;
@@ -379,4 +380,13 @@ td {
   border: 1px solid black;
   padding: 3px;
   color: #00ff7f;
+  font-size: 20px;
+  padding-right: 10px;
+}
+
+th {
+  background-color: rgb(103, 103, 103);
+  color: black;
+  font-size: 20px;
+  border: 2px solid black;
 }
