--- a/src/css/Style-TelaLogin.css
+++ b/src/css/Style-TelaLogin.css
@@ -129,12 +129,13 @@ h2 {
   width: 100%;
   /* width: 600px; */
 }
-/* 
+
 .imagem_principal {
-  width: 600px;
-  height: 680px;
-  overflow: hidden;
-} */
+  background-image: url(../Assets/img/portrait-of-factory-worker-in-protective-equipment-holding-thumbs-up-in-production-hall.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+}
 
 .img_footer {
   width: 90px;
